--- a/Copy_of_TugasEnkapsulasi1.ipynb
+++ b/Copy_of_TugasEnkapsulasi1.ipynb
@@ -52,6 +52,7 @@
         "  def get_gaji(self):\n",
         "    #lengkapi\n",
         "    return self.__gaji\n",
+        "\n",
         "  # Fungsi untuk mengubah gaji\n",
         "  def set_gaji(self, gaji):\n",
         "    #lengkapi\n",
@@ -65,7 +66,7 @@
         "nm = Karyawan('Ahmad', 4000000)\n",
         "\n",
         "# Mengakses/menampilkan nama dan gaji menggunakan fungsi\n",
-        "print('karyawan dengan nama', nm.get_nama(), 'dengan gaji', nm.get_gaji())\n",
+        "print('karyawan dengan nama', nm.get_nama(),'dengan gaji', nm.get_gaji())\n",
         "\n",
         "# Mengubah nama menjadi nama anda masing-masing dan gaji bebas menggunakan fungsi\n",
         "nm.set_nama('luzsabia')\n",
@@ -73,14 +74,14 @@
         "\n",
         "\n",
         "# Mengakses/menampilkan nama dan gaji setelah diubah\n",
-        "print('karyawan dengan nama', nm.get_nama(), 'dengan gaji', nm.get_gaji())\n"
+        "print('karyawan dengan nama', nm.get_nama(), 'dengan gaji', nm.get_gaji())"
       ],
       "metadata": {
         "id": "aOwy6rfdSga2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25de782c-46e1-43d2-9a4b-0d44e39dc1c4"
+        "outputId": "f708eb56-863c-41a3-e0a0-3d878b003a5a"
       },
       "execution_count": 2,
       "outputs": [
